# Integral-image

./: CMakeLists.txt  integral_image.cpp  integral_image.hpp
Unitests/: CMakeLists.txt  main.cpp
